# truncatedgaussianmixtures

./: .buildinfo  .gitignore  FullTruncatedGaussianTests.html  README.md  advantages.html  genindex.html  index.html  main.py  modules.html  objects.inv  pyproject.toml  quicksampler.html  quicksampler.samplers.html  search.html  searchindex.js  setup.py
.doctrees/: FullTruncatedGaussianTests.doctree  advantages.doctree  environment.pickle  index.doctree  modules.doctree  quicksampler.doctree  quicksampler.samplers.doctree
.github/workflows/: documentation.yaml  python-publish.yml
_sources/: index.rst.txt
docs/: conf.py  index.rst
test/: test_transformation.py
truncatedgaussianmixtures/: __init__.py  conversions.py  fit_gmm.py  gmm.py  julia_helpers.py  julia_import.py  save_load.py  test_utils.py  transformations.py
