[project]
name = "truncatedgaussianmixtures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "juliacall",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "h5py"
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
truncatedgaussianmixtures = { workspace = true }

[dependency-groups]
dev = [
    "pytest",
    "truncatedgaussianmixtures",
]
